--- a/app/src/main/res/layout/activity_oficios.xml
+++ b/app/src/main/res/layout/activity_oficios.xml
@@ -9,7 +9,7 @@
     <ListView
         android:id="@+id/lv_oficios"
         android:layout_width="368dp"
-        android:layout_height="253dp"
+        android:layout_height="229dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -35,20 +35,24 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="236dp"
         android:text="¿No encuentra el oficio deseado?"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv_oficios"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button"
-        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless"
+        style="@android:style/Widget.DeviceDefault.Button.Borderless"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="204dp"
-        android:text="Proponer oficio nuevo"
+        android:layout_height="46dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="220dp"
+        android:text="Proponer nuevo oficio"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/lv_oficios" />
+
 </android.support.constraint.ConstraintLayout>
