--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -71,7 +71,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:onClick="registrar"
-        android:text="Registrar"
+        android:text="@string/registrar"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
