--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:onClick="iniciarSesion"
         android:text="@string/iniciar_sesion"
         android:textColor="@android:color/black"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="76dp"
         android:linksClickable="true"
         android:text="¿No dispones de una cuenta AllJobs?"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,13 +84,15 @@
         android:id="@+id/btn_registro"
         style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
-        android:layout_height="42dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="76dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="60dp"
         android:onClick="registrar"
         android:text="Crea una cuenta"
         android:textColor="@android:color/black"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_registro_login"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
@@ -98,12 +100,14 @@
         android:id="@+id/btn_passOlvidada"
         style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
         android:text="¿Olvidaste tu contraseña?"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_pass_login"
-        tools:layout_editor_absoluteX="50dp"
         tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
