--- a/app/src/main/res/layout/activity_menu1.xml
+++ b/app/src/main/res/layout/activity_menu1.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
+        android:onClick="btn_TrabIndependiente"
         android:text="Trabajador independiente"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
