--- a/app/src/main/res/layout/list_item_oficios.xml
+++ b/app/src/main/res/layout/list_item_oficios.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#76ccf4"
+    android:background="#e5e9eb"
     android:textSize="24sp"
     android:padding="10sp"
     android:textColor="#000000"
