--- a/app/src/main/res/layout/activity_oficios.xml
+++ b/app/src/main/res/layout/activity_oficios.xml
@@ -48,15 +48,15 @@
     <Button
         android:id="@+id/button"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_width="122dp"
+        android:layout_height="75dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Proponer nuevo oficio"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="10sp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
