--- a/app/src/main/res/layout/activity_menu1.xml
+++ b/app/src/main/res/layout/activity_menu1.xml
@@ -4,47 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Menu1Activity">
+    tools:context=".Actividades.Menu1Activity">
 
     <Button
-        android:id="@+id/btn_empleador"
+        android:id="@+id/btn_trabajadores"
         style="@android:style/Widget.Button"
         android:layout_width="219dp"
         android:layout_height="75dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
-        android:onClick="btn_empleador"
-        android:text="Empleador"
+        android:onClick="listaTrabajadores"
+        android:text="Trabajadores"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />
 
     <Button
-        android:id="@+id/btn_trabajador"
+        android:id="@+id/btn_trabajos"
         style="@android:style/Widget.Button"
         android:layout_width="220dp"
         android:layout_height="81dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
-        android:onClick="btn_TrabIndependiente"
-        android:text="Trabajador independiente"
+        android:onClick="listaTrabajos"
+        android:text="Trabajos"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_empleador" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_trabajadores"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_titulo"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:text="Elija el rol que desee"
+        android:text="Elija la lista que desea visualizar"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +62,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:text="Oficio"
+        android:text="Nombre oficio"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
