--- a/app/src/main/res/layout/activity_oficios.xml
+++ b/app/src/main/res/layout/activity_oficios.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OficiosActivity">
+    tools:context=".Actividades.OficiosActivity">
 
     <ListView
         android:id="@+id/lv_oficios"
