--- a/app/src/main/res/layout/activity_trabajos.xml
+++ b/app/src/main/res/layout/activity_trabajos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrabajosActivity">
+    tools:context=".Actividades.TrabajosActivity">
 
     <ListView
         android:id="@+id/lv_trabajos"
