--- a/app/src/main/res/layout/activity_trabajadores.xml
+++ b/app/src/main/res/layout/activity_trabajadores.xml
@@ -7,7 +7,7 @@
     tools:context=".Actividades.TrabajadoresActivity">
 
     <TextView
-        android:id="@+id/tv_trabajadores"
+        android:id="@+id/tv_oficioTrabajadores"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -27,6 +27,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_trabajadores"
+        app:layout_constraintTop_toBottomOf="@+id/tv_oficioTrabajadores"
         app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
