--- a/app/src/main/res/layout/activity_trabajos.xml
+++ b/app/src/main/res/layout/activity_trabajos.xml
@@ -7,7 +7,7 @@
     tools:context=".Actividades.TrabajosActivity">
 
     <ListView
-        android:id="@+id/lv_trabajos"
+        android:id="@+id/lv_listaTrabajos"
         android:layout_width="368dp"
         android:layout_height="194dp"
         android:layout_marginBottom="8dp"
@@ -18,11 +18,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_trabajos"
+        app:layout_constraintTop_toBottomOf="@+id/tv_tituloListaTrabajos"
         app:layout_constraintVertical_bias="0.136" />
 
     <TextView
-        android:id="@+id/tv_trabajos"
+        android:id="@+id/tv_tituloListaTrabajos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
