--- a/app/src/main/res/layout/activity_trabajadores.xml
+++ b/app/src/main/res/layout/activity_trabajadores.xml
@@ -14,7 +14,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:text="Nombre Oficio"
-        android:textSize="24sp"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
