--- a/app/src/main/res/layout/activity_oficios.xml
+++ b/app/src/main/res/layout/activity_oficios.xml
@@ -46,7 +46,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnNuevoOficio"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
         android:layout_width="122dp"
         android:layout_height="75dp"
@@ -63,4 +63,33 @@
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/lv_oficios" />
 
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".Actividades.OficiosActivity">
+
+        <!-- Layout real de la actividad -->
+        <FrameLayout
+            android:id="@+id/contenido"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </FrameLayout>
+
+        <!-- Layout del menú lateral (Navigation View) -->
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/encabezado_menu"
+            app:menu="@menu/menu_opciones" />
+    </android.support.v4.widget.DrawerLayout>
+
 </android.support.constraint.ConstraintLayout>
+
