--- a/app/src/main/res/layout/fragment_oficios.xml
+++ b/app/src/main/res/layout/fragment_oficios.xml
@@ -1,38 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".Actividades.OficiosActivity">
-
-    <!-- Layout real de la actividad -->
-    <FrameLayout
-        android:id="@+id/contenido"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
-
-    <!-- Layout del menú lateral (Navigation View) -->
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/encabezado_menu"
-        app:menu="@menu/menu_opciones" />
-
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Actividades.OficiosActivity">
+        tools:context=".Actividades.MainActivity">
 
         <ListView
             android:id="@+id/lv_oficios"
@@ -92,6 +65,3 @@
             app:layout_constraintTop_toBottomOf="@+id/lv_oficios" />
 
     </android.support.constraint.ConstraintLayout>
-
-
-</android.support.v4.widget.DrawerLayout>
