--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:onClick="iniciarSesion"
         android:text="@string/iniciar_sesion"
         android:textColor="@android:color/black"
@@ -71,7 +71,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_passOlvidada" />
+        app:layout_constraintTop_toBottomOf="@+id/chkRecordarEmailPass"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_registro_login"
@@ -106,21 +107,18 @@
         app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion"
         app:layout_constraintVertical_bias="0.439" />
 
-    <Button
-        android:id="@+id/btn_passOlvidada"
-        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="37dp"
+    <CheckBox
+        android:id="@+id/chkRecordarEmailPass"
+        android:layout_width="101dp"
+        android:layout_height="31dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:text="¿Olvidaste tu contraseña?"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="10sp"
+        android:layout_marginTop="8dp"
+        android:text="Recordar"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.211"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPass"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPass" />
 
 </android.support.constraint.ConstraintLayout>
