--- a/app/src/main/res/layout/encabezado_menu.xml
+++ b/app/src/main/res/layout/encabezado_menu.xml
@@ -11,10 +11,10 @@
         android:scaleType="centerCrop" />
 
     <TextView
-        android:id="@+id/ndNombreUsuario"
+        android:id="@+id/txtNombreApellidoUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NOMBRE DE USUARIO"
+        android:text="NOMBRE Y APELLIDO"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:textStyle="bold"
         android:layout_gravity="bottom"
